--- a/_includes/carousel-overlay-effect.html
+++ b/_includes/carousel-overlay-effect.html
@@ -1,8 +1,8 @@
 <div class="wo-overlay-effect">
-    <img class="img-fluid" src="img/car1.jpg">
+    <img class="img-fluid" src="{{ include.image }}">
     <div class="caption wo-center">
         <div class="wo-caption-text">
-            <h3>Web design</h3>
+            <h3>{{ include.title}}</h3>
             <div class="icons">
                 <i class="fab fa-facebook-f"></i>
                 <i class="fab fa-twitter"></i>
