--- a/_includes/icon-title-text.html
+++ b/_includes/icon-title-text.html
@@ -1,5 +1,5 @@
 
-<svg class="icon icon-display"><use xlink:href="#icon-display"></use></svg>
+<span class="icon-brush">&#xe900;</span>
 
 <div class="caption wo-center">
     <h3>{{ include.title }}</h3>
