--- a/_includes/icon-title-text.html
+++ b/_includes/icon-title-text.html
@@ -1,5 +1,5 @@
 
-<span class="icon-brush">&#xe900;</span>
+<i class="icon"><img src="img/brush.svg"></i>
 
 <div class="caption wo-center">
     <h3>{{ include.title }}</h3>
