--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -126,9 +126,11 @@ $tablets:"only screen and (max-width: 780px)";
 
 /*Iconos*/
 
-.icon-brush:before {
-  content: "\e900";
-}
-.icon-camera:before {
-  content: "\e901";
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
 }
