--- a/_includes/icon-title-text.html
+++ b/_includes/icon-title-text.html
@@ -1,5 +1,5 @@
 
-<i class="icon"><img src="img/brush.svg"></i>
+<i class="icon"><img src="img/svg/brush.svg"></i>
 
 <div class="caption wo-center">
     <h3>{{ include.title }}</h3>
