--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -128,9 +128,11 @@ $tablets:"only screen and (max-width: 780px)";
 
 .icon {
   display: inline-block;
-  width: 1em;
-  height: 1em;
   stroke-width: 0;
   stroke: currentColor;
   fill: currentColor;
+  img{
+    height: 15px;
+    width: 15px;
+  }
 }
