--- a/_includes/icon-title-text.html
+++ b/_includes/icon-title-text.html
@@ -1,9 +1,10 @@
+<div class="col col-md-3 col-sm-6 wo-center">
+<i class="icon"><img src="{{ include.icon }}"></i>
 
-<i class="icon"><img src="img/icons/brush.png"></i>
-
-<div class="caption wo-center">
+<div class="caption">
     <h3>{{ include.title }}</h3>
     <div class="text">
         <p>{{ include.text }}</p>
     </div>
+</div>
 </div>
