--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,18 +23,11 @@
     <section class="wo-height-med">
         <div class="container">
             <div class="row">
-                <div class="col col-md-3 col-sm-6">
-                    {% include icon-title-text.html title="Web Design" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi bibendum tortor ac mi facilisis varius. "%}
-                </div>
-                <div class="col col-md-3 col-sm-6">
-                    {% include icon-title-text.html  title="Graphic Design" text="Fusce orci ligula, dignissim sit amet tincidunt non, tristique varius nulla."%}
-                </div>
-                <div class="col col-md-3 col-sm-6">
-                    {% include icon-title-text.html  title="UI Design" text="Cras sagittis semper erat. Donec condimentum pellentesque mi in laoreet. Quisque cursus nisi vel odio dapibus."%}
-                </div>
-                <div class="col col-md-3 col-sm-6">
-                    {% include icon-title-text.html  title="Copywritting" text="Non pharetra sem ultrices. Vivamus cursus risus sit amet volutpat cursus."%}
-                </div>
+                {% include icon-title-text.html icon="img/icons/brush.png" title="Web Design" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi bibendum tortor ac mi facilisis varius. "%}
+                {% include icon-title-text.html icon="img/icons/camera.png" title="Graphic Design" text="Fusce orci ligula, dignissim sit amet tincidunt non, tristique varius nulla."%}
+                {% include icon-title-text.html icon="img/icons/heart.png" title="UI Design" text="Cras sagittis semper erat. Donec condimentum pellentesque mi in laoreet. Quisque cursus nisi vel odio dapibus."%}
+                {% include icon-title-text.html icon="img/icons/tablet.png" title="Copywritting" text="Non pharetra sem ultrices. Vivamus cursus risus sit amet volutpat cursus."%}
+
             </div>
         </div>
     </section>
