--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -127,7 +127,7 @@ $tablets:"only screen and (max-width: 780px)";
 /*Iconos*/
 
 .icon {
-   padding-botto:20px;
+   padding-botton:20px;
   img{
     height: 35px;
     width: 35px;
