--- a/style.css
+++ b/style.css
@@ -2520,7 +2520,7 @@ tbody.collapse.show {
 
 /*Iconos*/
 .icon {
-  padding-botto: 20px; }
+  padding-botton: 20px; }
   .icon img {
     height: 35px;
     width: 35px; }
