--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,11 +10,11 @@
 
 
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+   <!--Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans" rel="stylesheet">
 
 
-    <!-- Iconos -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="{{ site.baseurl }}/scss/component/css/fontawesome-all.css" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
 
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
