--- a/style.css
+++ b/style.css
@@ -2432,6 +2432,9 @@ tbody.collapse.show {
 .icon-display:before {
   content: "\e956"; }
 
+body {
+  font-family: "'Lato', sans-serif;"; }
+
 /*Alturas, márgenes*/
 .wo-height-med {
   padding: 40px 0; }
