--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -13,6 +13,13 @@ body{
    font-family: $font-family1;
 }
 
+p, label, li{
+  font-family: $font-family1;
+}
+h1, h2, h3, h4, h5{
+  font-family: $font-family2;
+}
+
 
 /*Alturas, márgenes*/
 
