--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 @import url(scss/component/swiper.min.css);
 @import url(scss/component/owl.carousel.min.css);
 @import url(scss/component/owl.theme.default.min.css);
+@import url("https://fonts.googleapis.com/css?family=Lato|Open+Sans");
 .btn {
   display: inline-block;
   font-weight: 400;
