--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+/*Google fonts*/
+@import url("https://fonts.googleapis.com/css?family=Lato|Open+Sans");
 /*Aquí están los estilos bootstrap originales y los míos sustituidos*/
 /*Aquí sustituyo las clases de bootstrap*/
 /* Required*/
