--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,6 @@
+/*Google fonts*/
+@import url('https://fonts.googleapis.com/css?family=Lato|Open+Sans');
+
 /*Aquí están los estilos bootstrap originales y los míos sustituidos*/
 @import "scss/layout/custom.scss";
 
