--- a/style.css
+++ b/style.css
@@ -2435,14 +2435,22 @@ tbody.collapse.show {
 .icon-display:before {
   content: "\e956"; }
 
-body {
-  font-family: "'Lato', sans-serif;"; }
+/*
+$font-family1: "'Lato', sans-serif;";
+$font-family2: "'Open Sans', sans-serif";
 
-p, label, li {
-  font-family: "'Lato', sans-serif;"; }
 
-h1, h2, h3, h4, h5 {
-  font-family: "'Open Sans', sans-serif"; }
+body{
+   font-family: $font-family1;
+}
+
+p, label, li{
+  font-family: $font-family1;
+}
+h1, h2, h3, h4, h5{
+  font-family: $font-family2;
+}
+
 
 /*Alturas, márgenes*/
 .wo-height-med {
