--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -5,7 +5,7 @@
 $smartphones:"only screen and (max-width: 479px)";
 $tablets:"only screen and (max-width: 780px)";
 
-
+/*
 $font-family1: "'Lato', sans-serif;";
 $font-family2: "'Open Sans', sans-serif";
 
@@ -20,7 +20,7 @@ p, label, li{
 h1, h2, h3, h4, h5{
   font-family: $font-family2;
 }
-
+*/
 
 /*Alturas, márgenes*/
 
