pruebo quitando slider

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,14 @@
 <section class="content">
     <!--Slider-->
 
+    <section class="slider">
+        <!-- Owl -->
+        <div id="owl-slider" class="owl-carousel owl-theme">
+            {% include slider-item.html  image="img/slide2.jpg" pretitle="AMAZING NEW" title="DESIGN AGENCY" subtitle="TO CREATE YOUR PROJECT" %}
+            {% include slider-item.html  image="img/slide1.jpg" pretitle="LOREM IPSUM" title="CONSECTETUR ADISPISCING" subtitle="BIBENDUM TORTOR" %}
+            {% include slider-item.html  image="img/slide3.jpg" pretitle="DOLOR SIT MET" title="DONEC CONDIMENTUM" subtitle="QUSQUE CURSUS NISI" %}
+        </div>
+    </section>
 
 
 
@@ -216,21 +224,21 @@
 
         });
         $('#owl-carousel').owlCarousel({
-        loop:true,
-        margin:10,
-        nav:true,
-        responsive:{
-            0:{
-                items:1
-            },
-            600:{
-                items:3
-            },
-            1000:{
-                items:5
+            loop:true,
+            margin:10,
+            nav:true,
+            responsive:{
+                0:{
+                    items:1
+                },
+                600:{
+                    items:3
+                },
+                1000:{
+                    items:5
+                }
             }
-        }
-    });
+        })
     })
 
 </script>
