pruebo quitando slider

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,14 +106,14 @@
             <div class="wo-text wo-center"><p>We are a very young, but very passionate design agency based in London, UK. Let us help you width your next proyect, today.</p>
             </div>
             <div id="owl-carousel" class="owl-carousel owl-theme">
-                {% include carousel-overlay-effect.html %}
-                {% include carousel-overlay-effect.html %}
-                {% include carousel-overlay-effect.html %}
-                {% include carousel-overlay-effect.html %}
-                {% include carousel-overlay-effect.html %}
-                {% include carousel-overlay-effect.html %}
-                {% include carousel-overlay-effect.html %}
-                {% include carousel-overlay-effect.html %}
+                {% include carousel-overlay-effect.html image="img/car1.jpg" %}
+                {% include carousel-overlay-effect.html image="img/car2.jpg %}
+                {% include carousel-overlay-effect.html image="img/car3.jpg %}
+                {% include carousel-overlay-effect.html image="img/car4.jpg %}
+                {% include carousel-overlay-effect.html image="img/car1.jpg %}
+                {% include carousel-overlay-effect.html image="img/car2.jpg %}
+                {% include carousel-overlay-effect.html image="img/car3.jpg %}
+                {% include carousel-overlay-effect.html image="img/car4.jpg %}
 
             </div>
         </div>
