pruebo quitando slider

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -107,13 +107,13 @@
             </div>
             <div id="owl-carousel" class="owl-carousel owl-theme">
                 {% include carousel-overlay-effect.html image="img/car1.jpg" %}
-                {% include carousel-overlay-effect.html image="img/car2.jpg %}
-                {% include carousel-overlay-effect.html image="img/car3.jpg %}
-                {% include carousel-overlay-effect.html image="img/car4.jpg %}
-                {% include carousel-overlay-effect.html image="img/car1.jpg %}
-                {% include carousel-overlay-effect.html image="img/car2.jpg %}
-                {% include carousel-overlay-effect.html image="img/car3.jpg %}
-                {% include carousel-overlay-effect.html image="img/car4.jpg %}
+                {% include carousel-overlay-effect.html image="img/car2.jpg" %}
+                {% include carousel-overlay-effect.html image="img/car3.jpg" %}
+                {% include carousel-overlay-effect.html image="img/car4.jpg" %}
+                {% include carousel-overlay-effect.html image="img/car1.jpg" %}
+                {% include carousel-overlay-effect.html image="img/car2.jpg" %}
+                {% include carousel-overlay-effect.html image="img/car3.jpg" %}
+                {% include carousel-overlay-effect.html image="img/car4.jpg" %}
 
             </div>
         </div>
