pruebo quitando slider

--- a/scss/layout/custom.scss
+++ b/scss/layout/custom.scss
@@ -25,3 +25,7 @@ $theme-colors: (
         "primary": #3ec6ff,
         "danger": #ff4136
 );
+// stylelint-disable value-keyword-case
+$font-family-sans-serif:      'Lato', sans-serif; !default;
+$font-family-monospace:       'Open Sans', sans-serif; !default;
+$font-family-base:            $font-family-sans-serif !default;
