--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
 
 
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:400,600,700" rel="stylesheet">
 
 
 
