--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -142,7 +142,7 @@ h1, h2, h3, h4, h5{
 /*Iconos*/
 
 .icon {
-   padding-botton:20px;
+   margin-bottom:40px;
   img{
     height: 35px;
     width: 35px;
