--- a/scss/layout/custom.scss
+++ b/scss/layout/custom.scss
@@ -26,6 +26,6 @@ $theme-colors: (
         "danger": #ff4136
 );
 // stylelint-disable value-keyword-case
-$font-family-sans-serif:      'Lato', sans-serif; !default;
-$font-family-monospace:       'Open Sans', sans-serif; !default;
+$font-family-sans-serif:      'Lato', sans-serif !default;
+$font-family-monospace:       'Open Sans', sans-serif !default;
 $font-family-base:            $font-family-sans-serif !default;
