--- a/style.css
+++ b/style.css
@@ -2437,7 +2437,7 @@ tbody.collapse.show {
 body {
   font-family: "'Open Sans', sans-serif"; }
 
-p, label, li {
+p, label, li, a {
   font-family: "'Open Sans', sans-serif"; }
 
 h1, h2, h3, h4, h5 {
