--- a/style.scss
+++ b/style.scss
@@ -1,15 +1,12 @@
 /*Google fonts*/
-@import url('https://fonts.googleapis.com/css?family=Lato|Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Lato|Open+Sans:400,600,700');
 
 /*Aquí están los estilos bootstrap originales y los míos sustituidos*/
 @import "scss/layout/custom.scss";
 
 /*Aquí los css de componentes descargados*/
-@import "scss/component/swiper.min.css";
 @import "scss/component/owl.carousel.min.css";
 @import "scss/component/owl.theme.default.min.css";
 
 /*Éstos son mis estilos*/
-@import "scss/layout/swiper-style.scss";
-@import "scss/layout/icons.scss";
 @import "scss/layout/commons.scss";
