--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -14,14 +14,9 @@ $gray: #666;
 $lightGray: #eee;
 $white: #fff;
 
-// Font stacks
-$helvetica: Helvetica, Arial, sans-serif;
-$helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$georgia: Georgia, serif;
+// Font
 
-// Mobile breakpoints
-@mixin mobile {
-  @media screen and (max-width: 640px) {
-    @content;
-  }
-}
+$font-family2: "'Lato', sans-serif;";
+$font-family1: "'Open Sans', sans-serif";
+
+
