--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -4,8 +4,8 @@ $smartphones:"only screen and (max-width: 479px)";
 $tablets:"only screen and (max-width: 780px)";
 
 
-$font-family2: "'Lato', sans-serif;";
-$font-family1: "'Open Sans', sans-serif";
+$font-family2: 'Lato', sans-serif;
+$font-family1: 'Open Sans', sans-serif;
 
 
 
