--- a/style.css
+++ b/style.css
@@ -2395,10 +2395,10 @@ tbody.collapse.show {
 /*Aquí los css de componentes descargados*/
 /*Éstos son mis estilos*/
 p, label, li, a {
-  font-family: "'Open Sans', sans-serif"; }
+  font-family: "Open Sans", sans-serif; }
 
 h1, h2, h3, h4, h5 {
-  font-family: "'Lato', sans-serif;"; }
+  font-family: "Lato", sans-serif; }
 
 h1 {
   font-size: 3rem; }
