--- a/_includes/carousel-overlay-effect.html
+++ b/_includes/carousel-overlay-effect.html
@@ -4,9 +4,9 @@
         <div class="wo-caption-text">
             <h3>{{ include.title}}</h3>
             <div class="icons">
-                <i class="icon"><img src="{{ include.social1 }}"></i>
-                <i class="icon"><img src="{{ include.social2 }}"></i>
-                <i class="icon"><img src="{{ include.social3 }}"></i>
+                <i class="social"><img src="{{ include.social1 }}"></i>
+                <i class="social"><img src="{{ include.social2 }}"></i>
+                <i class="social"><img src="{{ include.social3 }}"></i>
             </div>
         </div>
     </div>
