--- a/style.css
+++ b/style.css
@@ -2404,7 +2404,7 @@ h1 {
   font-size: 3rem; }
 
 h2 {
-  font-size: 2.5rem; }
+  font-size: 2.4rem; }
 
 h3 {
   font-size: 1.8rem; }
@@ -2504,5 +2504,9 @@ p {
   .icon img {
     height: 35px;
     width: 35px; }
+
+.social img {
+  height: 10px;
+  width: 10px; }
 
 /*# sourceMappingURL=style.css.map */
