--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
-
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:400,600,700" rel="stylesheet">
-
+    <!-- Iconos -->
+    <link rel="stylesheet" href="https://i.icomoon.io/public/temp/ff6dc08cfd/UntitledProject/style.css">
 
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
@@ -22,8 +23,6 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/owl.carousel.js"></script>
 
-    <!-- Swiper JS -->
-    <script src="js/swiper.min.js"></script>
 
 
     <script src="js/wo-js.js"></script>
