--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -164,7 +164,14 @@ p{
 /*Iconos*/
 
 .icon {
-   margin-bottom:20px;
+  background: $main-color;
+  padding: 2rem;
+  border-radius: 50%;
+  display: block;
+  width: 80px;
+  height: 80px;
+  text-align: center;
+  margin: 0 auto 2rem;
   span:before{
     font-size: 2rem;
   }
