tamaños de fuente

--- a/_includes/icon-title-text.html
+++ b/_includes/icon-title-text.html
@@ -1,5 +1,5 @@
 <div class="col col-md-3 col-sm-6 wo-center">
-<i class="icon"><span class="icon-brush"></span></i>
+<i class="icon"><span class="icon-{{ include.icon }}"></span></i>
 
 <div class="caption">
     <h3>{{ include.title }}</h3>
