tamaños de fuente

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,14 +106,14 @@
             <div class="wo-text wo-center"><p>We are a very young, but very passionate design agency based in London, UK. Let us help you width your next proyect, today.</p>
             </div>
             <div id="owl-carousel" class="owl-carousel owl-theme">
-                {% include carousel-overlay-effect.html image="img/car1.jpg" title="JAMES HEWIT" social1="img/icons/instagram.png" social2="img/icons/pinterest.png" social3="img/icons/twitter.png" %}
-                {% include carousel-overlay-effect.html image="img/car2.jpg" title="SANDRA GARCÍA" social1="img/icons/instagram.png" social2="img/icons/pinterest.png" social3="img/icons/twitter.png" %}
-                {% include carousel-overlay-effect.html image="img/car3.jpg" title="JOHN SNOW" social1="img/icons/instagram.png" social2="" social3="img/icons/twitter.png" %}
-                {% include carousel-overlay-effect.html image="img/car4.jpg" title="ANNE LEWIS" social1="img/icons/instagram.png" social2="img/icons/pinterest.png" social3="img/icons/twitter.png" %}
-                {% include carousel-overlay-effect.html image="img/car1.jpg" title="ALEX JACKSON" social1="img/icons/instagram.png" social2="img/icons/pinterest.png" social3="" %}
-                {% include carousel-overlay-effect.html image="img/car2.jpg" title="MARÍA LOPEZ" social1="img/icons/instagram.png" social2="img/icons/pinterest.png" social3="img/icons/twitter.png" %}
-                {% include carousel-overlay-effect.html image="img/car3.jpg" title="WILLIAM BLUE" social1="img/icons/instagram.png" social2="img/icons/pinterest.png" social3="img/icons/twitter.png" %}
-                {% include carousel-overlay-effect.html image="img/car4.jpg" title="ELLE SHEERAN" social1="" social2="img/icons/pinterest.png" social3="img/icons/twitter.png" %}
+                {% include carousel-overlay-effect.html image="img/car1.jpg" title="JAMES HEWIT" social1="instagram" social2="pinterest" social3="twitter" %}
+                {% include carousel-overlay-effect.html image="img/car2.jpg" title="SANDRA GARCÍA" social1="instagram" social2="pinterest" social3="twitter" %}
+                {% include carousel-overlay-effect.html image="img/car3.jpg" title="JOHN SNOW" social1="instagram" social2="" social3="twitter" %}
+                {% include carousel-overlay-effect.html image="img/car4.jpg" title="ANNE LEWIS" social1="instagram" social2="pinterest" social3="twitter" %}
+                {% include carousel-overlay-effect.html image="img/car1.jpg" title="ALEX JACKSON" social1="instagram" social2="pinterest" social3="" %}
+                {% include carousel-overlay-effect.html image="img/car2.jpg" title="MARÍA LOPEZ" social1="instagram" social2="pinterest" social3="twitter" %}
+                {% include carousel-overlay-effect.html image="img/car3.jpg" title="WILLIAM BLUE" social1="instagram" social2="pinterest" social3="twitter" %}
+                {% include carousel-overlay-effect.html image="img/car4.jpg" title="ELLE SHEERAN" social1="" social2="pinterest" social3="twitter" %}
 
             </div>
         </div>
