--- a/style.css
+++ b/style.css
@@ -2503,7 +2503,7 @@ p {
     text-align: left; }
 
 /*Iconos*/
-.icon {
+.icon-background-rounded {
   background: #3ec6ff;
   padding: 2rem;
   border-radius: 50%;
@@ -2512,17 +2512,13 @@ p {
   height: 5rem;
   text-align: center;
   margin: 0 auto 1rem; }
-  .icon span:before {
+  .icon-background-rounded span:before {
     font-size: 2rem;
     color: #FFFFFF;
-    line-height: 0.7;
-    margin-left: -0.3rem; }
+    line-height: 0.6;
+    margin-left: -0.4rem; }
 
 .icon-brush:before {
   content: "\e900"; }
-
-.social img {
-  height: 10px;
-  width: 10px; }
 
 /*# sourceMappingURL=style.css.map */
