tamaños de fuente

--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -93,7 +93,7 @@ p{
 .wo-section-back{
   background: url("img/slide3.jpg") fixed center center;
   height:300px;
-  .wo-title{
+  h3{
     text-align: left;
     color: $white-color;
   }
@@ -102,7 +102,7 @@ p{
 .wo-section-back2{
   background: url("img/slide2.jpg") fixed center center;
   height:300px;
-  .wo-title{
+  p{
     color: $white-color;
   }
 
