--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -76,7 +76,7 @@ p{
   .navbar-brand{
     color: $main-color;
     span{
-      font-weight: bold;
+      font-weight: extra-bold;
       font-family: $font-family2;
     }
   }
