--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Open+Sans:400,600,700" rel="stylesheet">
     <!-- Iconos -->
     <link rel="stylesheet" href="https://i.icomoon.io/public/temp/ff6dc08cfd/UntitledProject/style.css">
 
