--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -75,8 +75,9 @@ p{
 .navbar{
   .navbar-brand{
     color: $main-color;
+    font-weight: 300;
     span{
-      font-weight: extra-bold;
+      font-weight: 900;
       font-family: $font-family2;
     }
   }
