--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -12,7 +12,7 @@ $font-family2: 'Lato', sans-serif;
 /*Colors*/
 $main-color: #3ec6ff;
 $white-color: #FFFFFF;
-
+$dark-color: #212529;
 
 /*Variable tamaño de fuente*/
 
@@ -80,6 +80,12 @@ p{
       font-weight: 900;
       font-family: $font-family2;
     }
+  }
+  .nav-item{
+    .item-link{
+      color: $dark-color;
+    }
+
   }
 }
 
