--- a/style.css
+++ b/style.css
@@ -2453,7 +2453,8 @@ p {
     margin: -8% 0 0 -25%;
     text-align: center; }
     .slider .item .caption h2, .slider .item .caption h3 {
-      color: #FFFFFF; }
+      color: #FFFFFF;
+      letter-spacing: 0.4rem; }
 
 .wo-section-back {
   background: url("img/slide3.jpg") fixed center center;
