--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -39,7 +39,7 @@ h3{
   font-size: $rem*1.2;
 }
 p{
-  font-size: $rem;
+  font-size: $rem0.8;
 }
 
 
@@ -84,6 +84,7 @@ p{
   .nav-item{
     .nav-link{
       color: $dark-color;
+      font-size:$rem*0.8;
     }
 
   }
