--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,15 +6,15 @@
 
 <header>
     <div class="container">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar">
             {% include logo.html %}
-            <!--Botón para el responvise-->
+            <!--Botón para el menú responvise-->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!--Fin para el responsive-->
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav float-right">
+                <ul class="navbar-nav">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Home</a>
                     </li>
