--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -81,6 +81,9 @@ p{
       font-family: $font-family2;
     }
   }
+  .navbar-collapse{
+    justify-content: flex-end;
+  }
   .nav-item{
     .nav-link{
       color: $dark-color;
