tamaño de letra

--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -81,9 +81,9 @@ p{
       font-family: $font-family2;
     }
   }
-  .navbar-collapse{
-    justify-content: flex-end;
-  }
+  //.navbar-collapse{
+  //  justify-content: flex-end;
+ // }
   .nav-item{
     .nav-link{
       color: $dark-color;
