--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 
 <header>
     <div class="container">
-        <nav class="navbar">
+        <nav class="navbar navbar-expand-lg">
             {% include logo.html %}
             <!--Botón para el menú responvise-->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
