--- a/style.css
+++ b/style.css
@@ -2439,6 +2439,8 @@ p {
   .navbar .navbar-brand span {
     font-weight: 900;
     font-family: "Lato", sans-serif; }
+.navbar .navbar-collapse {
+  justify-content: flex-end; }
 .navbar .nav-item .nav-link {
   color: #212529;
   font-size: 0.9rem; }
