--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control" placeholder="Search">
+                    <input class="form-control mr-sm-2" placeholder="Search">
                     <i class="icon icon-search"> <span class="icon-magnifying-glass"></span></i>
                 </form>
             </div>
