actualizo estilos del nav

--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -124,7 +124,7 @@ p{
   h3{
     text-align: left;
     color: $white-color;
-    font-weight: lighter;
+    font-weight: 300;
   }
   .form-control{
     background-color: transparent;
