--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,7 +72,7 @@
 
 
 
-    <section class="wo-section-back wo-height-med wo-center">
+    <section class="wo-section-back wo-height-med">
         <div class="container">
             <div class="wo-title"><h3>SUSCRIBE TO OUR NEWSLETTER</h3></div>
             <div class="wo-form">
