actualizo estilos del nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -128,7 +128,7 @@
 
     <section class="wo-section-back2 wo-height-med wo-center">
         <div class="container">
-            <i class="fab fa-facebook-f"></i>
+            <i class="icon icon-background-rounded"><span class="icon-facebook"></span></i>
             <div class="wo-text wo-center"><p>These guys are just incredible! I was able to get my project done in just 7 days.<br>I mean AMAZING service! Highly recomended.</p></div>
             <div class="wo-text wo-center"><p>@Annie_Wrong</p></div>
 
