actualizo estilos del nav

--- a/_includes/icon-title-text.html
+++ b/_includes/icon-title-text.html
@@ -1,4 +1,4 @@
-<div class="col col-md-3 col-sm-6 wo-center">
+<div class="col col-lg-3 col-md-3 col-sm-6 wo-center">
 <i class="icon icon-background-rounded"><span class="icon-{{ include.icon }}"></span></i>
 
 <div class="caption">
