--- a/_includes/overlay-effect.html
+++ b/_includes/overlay-effect.html
@@ -1,3 +1,4 @@
+<div class="col col-lg-3 col-md-3 col-sm-6 wo-nopadding-col wo-overlay-effect">
 <img class="img-fluid" src="{{ include.image }}">
 
 <div class="caption wo-center" href="#">
@@ -7,5 +8,5 @@
             <p>{{ include.text }}</p>
         </div>
     </div>
-
+ </div>
 </div>
