--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -137,7 +137,7 @@ p{
   p{
     color: $white-color;
   }
-  .icon{
+  .icon-background-rounded{
     background: $white-color;
     color: $main-color;
   }
