--- a/_includes/form-contact.html
+++ b/_includes/form-contact.html
@@ -8,5 +8,5 @@
 
         <textarea class="form-control"  placeholder="Message"></textarea>
 
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="wo-btn btn btn-primary">Submit</button>
 </form>
