--- a/_includes/form-news.html
+++ b/_includes/form-news.html
@@ -2,6 +2,6 @@
 
     <input type="text" class="form-control  mb-2 mr-sm-2 mb-sm-0" placeholder="Email">
 
-    <button type="submit" class="btn btn-primary">Suscribe</button>
+    <button type="submit" class="wo-btn btn btn-primary">Suscribe</button>
 
 </form>
